--- a/artifacts/cloudformation-template.yaml
+++ b/artifacts/cloudformation-template.yaml
@@ -15,6 +15,11 @@ Resources:
     Properties:
       RoleName:
         Ref: RoleName
+      Tags:
+        - Key: "managed-by"
+          Value: "nuon"
+        - Key: "nuon-sandbox-type"
+          Value: "aws-eks"
       AssumeRolePolicyDocument:
         Statement:
           - Effect: Allow
@@ -36,198 +41,203 @@ Resources:
   ProvisionPolicy:
     Type: AWS::IAM::Policy
     Properties:
-      PolicyName: ProvisionPolicy
+      PolicyName: !Sub
+        - nuon-provision-${RoleName}
+        - RoleName: !Ref RoleName
       Roles:
         - !Ref InstallRole
       PolicyDocument:
         Statement:
           - Effect: Allow
             Action:
-            - ec2:AllocateAddress
-            - ec2:AssociateRouteTable
-            - ec2:AttachInternetGateway
-            - ec2:AuthorizeSecurityGroupEgress
-            - ec2:AuthorizeSecurityGroupIngress
-            - ec2:AuthorizeSecurityGroupIngress
-            - ec2:DescribeSecurityGroupReferences
-            - ec2:DescribeSecurityGroupRules
-            - ec2:DescribeSecurityGroups
-            - ec2:CreateInternetGateway
-            - ec2:CreateNatGateway
-            - ec2:CreateRoute
-            - ec2:CreateRouteTable
-            - ec2:CreateSecurityGroup
-            - ec2:CreateSubnet
-            - ec2:CreateTags
-            - ec2:CreateVpc
-            - ec2:CreateLaunchTemplateVersion
-            - ec2:CreateLaunchTemplate
-            - ec2:DescribeAddresses
-            - ec2:DescribeInternetGateways
-            - ec2:DescribeLaunchTemplateVersions
-            - ec2:DescribeLaunchTemplates
-            - ec2:DescribeNatGateways
-            - ec2:DescribeNetworkAcls
-            - ec2:DescribeRouteTables
-            - ec2:DescribeSecurityGroups
-            - ec2:DescribeSubnets
-            - ec2:DescribeTags
-            - ec2:DescribeVpcAttribute
-            - ec2:DescribeVpcClassicLink
-            - ec2:DescribeVpcClassicLinkDnsSupport
-            - ec2:DescribeVpcs
-            - ec2:ModifySubnetAttribute
-            - ec2:ModifyVpcAttribute
-            - ec2:ModifyLaunchTemplate
-            - ec2:RevokeSecurityGroupEgress
-            - ec2:RunInstances
-            - ecr:CreateRepository
-            - ecr:DescribeRepositories
-            - ecr:ListTagsForResource
-            - ecr:TagResource
-            - eks:CreateCluster
-            - eks:CreateNodegroup
-            - eks:DescribeCluster
-            - eks:TagResource
-            - eks:ListTagsForResource
-            - eks:DescribeNodegroup
-            - eks:ListAddons
-            - eks:CreateAddon
-            - eks:DescribeAddon
-            - eks:DescribeAddonConfiguration
-            - eks:DescribeAddonVersions
-            - iam:AttachRolePolicy
-            - iam:CreateOpenIDConnectProvider
-            - iam:UpdateAssumeRolePolicy
-            - iam:TagOpenIDConnectProvider
-            - iam:CreatePolicy
-            - iam:CreatePolicyVersion
-            - iam:CreateRole
-            - iam:CreateServiceLinkedRole
-            - iam:GetOpenIDConnectProvider
-            - iam:GetPolicy
-            - iam:GetPolicyVersion
-            - iam:GetRole
-            - iam:GetRolePolicy
-            - iam:ListAttachedRolePolicies
-            - iam:ListRolePolicies
-            - iam:PassRole
-            - iam:PutRolePolicy
-            - iam:TagPolicy
-            - iam:TagRole
-            - kms:CreateAlias
-            - kms:CreateGrant
-            - kms:CreateKey
-            - kms:DescribeKey
-            - kms:GetKeyPolicy
-            - kms:GetKeyRotationStatus
-            - kms:ListAliases
-            - kms:ListResourceTags
-            - kms:PutKeyPolicy
-            - kms:TagResource
-            - logs:CreateLogGroup
-            - logs:TagLogGroup
-            - logs:DescribeLogGroups
-            - logs:ListTagsLogGroup
-            - logs:PutRetentionPolicy
-            - logs:TagResource
-            - route53:ChangeTagsForResource
-            - route53:CreateHostedZone
-            - route53:GetChange
-            - route53:GetHostedZone
-            - route53:ListResourceRecordSets
-            - route53:ListTagsForResource
-            - route53:ChangeResourceRecordSets
-            - s3:GetObject
-            - s3:ListBucket
-            - s3:PutObject
+              - ec2:AllocateAddress
+              - ec2:AssociateRouteTable
+              - ec2:AttachInternetGateway
+              - ec2:AuthorizeSecurityGroupEgress
+              - ec2:AuthorizeSecurityGroupIngress
+              - ec2:AuthorizeSecurityGroupIngress
+              - ec2:DescribeSecurityGroupReferences
+              - ec2:DescribeSecurityGroupRules
+              - ec2:DescribeSecurityGroups
+              - ec2:DescribeAvailabilityZones
+              - ec2:CreateInternetGateway
+              - ec2:CreateNatGateway
+              - ec2:CreateNetworkAclEntry
+              - ec2:CreateRoute
+              - ec2:CreateRouteTable
+              - ec2:CreateSecurityGroup
+              - ec2:CreateSubnet
+              - ec2:CreateTags
+              - ec2:CreateVpc
+              - ec2:CreateLaunchTemplateVersion
+              - ec2:CreateLaunchTemplate
+              - ec2:DescribeAddresses
+              - ec2:DescribeInternetGateways
+              - ec2:DescribeLaunchTemplateVersions
+              - ec2:DescribeLaunchTemplates
+              - ec2:DescribeNatGateways
+              - ec2:DescribeNetworkAcls
+              - ec2:DescribeRouteTables
+              - ec2:DescribeSecurityGroups
+              - ec2:DescribeSubnets
+              - ec2:DescribeTags
+              - ec2:DescribeVpcAttribute
+              - ec2:DescribeVpcClassicLink
+              - ec2:DescribeVpcClassicLinkDnsSupport
+              - ec2:DescribeVpcs
+              - ec2:ModifySubnetAttribute
+              - ec2:ModifyVpcAttribute
+              - ec2:ModifyLaunchTemplate
+              - ec2:RevokeSecurityGroupEgress
+              - ec2:RunInstances
+              - ecr:CreateRepository
+              - ecr:DescribeRepositories
+              - ecr:ListTagsForResource
+              - ecr:TagResource
+              - eks:CreateCluster
+              - eks:CreateNodegroup
+              - eks:DescribeCluster
+              - eks:TagResource
+              - eks:ListTagsForResource
+              - eks:DescribeNodegroup
+              - eks:ListAddons
+              - eks:CreateAddon
+              - eks:DescribeAddon
+              - eks:DescribeAddonConfiguration
+              - eks:DescribeAddonVersions
+              - iam:AttachRolePolicy
+              - iam:CreateOpenIDConnectProvider
+              - iam:UpdateAssumeRolePolicy
+              - iam:TagOpenIDConnectProvider
+              - iam:CreatePolicy
+              - iam:CreatePolicyVersion
+              - iam:CreateRole
+              - iam:CreateServiceLinkedRole
+              - iam:GetOpenIDConnectProvider
+              - iam:GetPolicy
+              - iam:GetPolicyVersion
+              - iam:GetRole
+              - iam:GetRolePolicy
+              - iam:ListAttachedRolePolicies
+              - iam:ListRolePolicies
+              - iam:PassRole
+              - iam:PutRolePolicy
+              - iam:TagPolicy
+              - iam:TagRole
+              - kms:CreateAlias
+              - kms:CreateGrant
+              - kms:CreateKey
+              - kms:DescribeKey
+              - kms:GetKeyPolicy
+              - kms:GetKeyRotationStatus
+              - kms:ListAliases
+              - kms:ListResourceTags
+              - kms:PutKeyPolicy
+              - kms:TagResource
+              - logs:CreateLogGroup
+              - logs:TagLogGroup
+              - logs:DescribeLogGroups
+              - logs:ListTagsLogGroup
+              - logs:PutRetentionPolicy
+              - logs:TagResource
+              - route53:ChangeTagsForResource
+              - route53:CreateHostedZone
+              - route53:GetChange
+              - route53:GetHostedZone
+              - route53:ListResourceRecordSets
+              - route53:ListTagsForResource
+              - route53:ChangeResourceRecordSets
+              - s3:GetObject
+              - s3:ListBucket
+              - s3:PutObject
             Resource: "*"
-
 
   DeprovisionPolicy:
     Type: AWS::IAM::Policy
     Properties:
-      PolicyName: ProvisionPolicy
+      PolicyName: !Sub
+        - nuon-deprovision-${RoleName}
+        - RoleName: !Ref RoleName
       Roles:
         - !Ref InstallRole
       PolicyDocument:
         Statement:
           - Effect: Allow
             Action:
-            - ec2:DeleteInternetGateway
-            - ec2:DeleteVpc
-            - ec2:DeleteNatGateway
-            - ec2:DeleteRoute
-            - ec2:DeleteRouteTable
-            - ec2:DeleteSubnet
-            - ec2:DeleteTags
-            - ec2:DeleteNetworkAclEntry
-            - ec2:DescribeAddresses
-            - ec2:DescribeInternetGateways
-            - ec2:DescribeLaunchTemplateVersions
-            - ec2:DescribeLaunchTemplates
-            - ec2:DescribeNatGateways
-            - ec2:DescribeNetworkAcls
-            - ec2:DeleteNetworkInterface
-            - ec2:DetachNetworkInterface
-            - ec2:DescribeNetworkInterfaces
-            - ec2:DescribeRouteTables
-            - ec2:DescribeSecurityGroupRules
-            - ec2:DescribeSecurityGroups
-            - ec2:DescribeSubnets
-            - ec2:DescribeTags
-            - ec2:DescribeVpcAttribute
-            - ec2:DescribeVpcClassicLink
-            - ec2:DescribeVpcClassicLinkDnsSupport
-            - ec2:DescribeVpcs
-            - ec2:DetachInternetGateway
-            - ec2:DisassociateAddress
-            - ec2:DisassociateRouteTable
-            - ec2:DeleteLaunchTemplate
-            - ec2:DeleteLaunchTemplateVersions
-            - ec2:ReleaseAddress
-            - ec2:RevokeSecurityGroupIngress
-            - ecr:DeleteRepository
-            - ecr:DescribeRepositories
-            - ecr:ListTagsForResource
-            - eks:DeleteCluster
-            - eks:DeleteNodegroup
-            - eks:DescribeCluster
-            - eks:DescribeNodegroup
-            - eks:DeleteAddon
-            - iam:DeleteOpenIDConnectProvider
-            - iam:DeletePolicy
-            - iam:DeletePolicyVersion
-            - iam:DeleteRole
-            - iam:DeleteRolePolicy
-            - iam:DetachRolePolicy
-            - iam:GetOpenIDConnectProvider
-            - iam:GetPolicy
-            - iam:GetPolicyVersion
-            - iam:GetRole
-            - iam:GetRolePolicy
-            - iam:ListAttachedRolePolicies
-            - iam:ListInstanceProfilesForRole
-            - iam:ListPolicyVersions
-            - iam:ListRolePolicies
-            - kms:DeleteAlias
-            - kms:DescribeKey
-            - kms:GetKeyPolicy
-            - kms:GetKeyRotationStatus
-            - kms:ListAliases
-            - kms:ListResourceTags
-            - kms:ScheduleKeyDeletion
-            - logs:DeleteLogGroup
-            - logs:DescribeLogGroups
-            - logs:ListTagsLogGroup
-            - route53:DeleteHostedZone
-            - route53:GetDNSSEC
-            - route53:GetHostedZone
-            - route53:ListResourceRecordSets
-            - route53:ListTagsForResource
-            - route53:ChangeTagsForResource
-            - s3:GetObject
-            - s3:ListBucket
-            - kms:RetireGrant
-            - ec2:DeleteSecurityGroup
+              - ec2:DeleteInternetGateway
+              - ec2:DeleteVpc
+              - ec2:DeleteNatGateway
+              - ec2:DeleteRoute
+              - ec2:DeleteRouteTable
+              - ec2:DeleteSubnet
+              - ec2:DeleteTags
+              - ec2:DeleteNetworkAclEntry
+              - ec2:DescribeAddresses
+              - ec2:DescribeInternetGateways
+              - ec2:DescribeLaunchTemplateVersions
+              - ec2:DescribeLaunchTemplates
+              - ec2:DescribeNatGateways
+              - ec2:DescribeNetworkAcls
+              - ec2:DeleteNetworkInterface
+              - ec2:DetachNetworkInterface
+              - ec2:DescribeNetworkInterfaces
+              - ec2:DescribeRouteTables
+              - ec2:DescribeSecurityGroupRules
+              - ec2:DescribeSecurityGroups
+              - ec2:DescribeSubnets
+              - ec2:DescribeTags
+              - ec2:DescribeVpcAttribute
+              - ec2:DescribeVpcClassicLink
+              - ec2:DescribeVpcClassicLinkDnsSupport
+              - ec2:DescribeVpcs
+              - ec2:DetachInternetGateway
+              - ec2:DisassociateAddress
+              - ec2:DisassociateRouteTable
+              - ec2:DeleteLaunchTemplate
+              - ec2:DeleteLaunchTemplateVersions
+              - ec2:ReleaseAddress
+              - ec2:RevokeSecurityGroupIngress
+              - ecr:DeleteRepository
+              - ecr:DescribeRepositories
+              - ecr:ListTagsForResource
+              - eks:DeleteCluster
+              - eks:DeleteNodegroup
+              - eks:DescribeCluster
+              - eks:DescribeNodegroup
+              - eks:DeleteAddon
+              - iam:DeleteOpenIDConnectProvider
+              - iam:DeletePolicy
+              - iam:DeletePolicyVersion
+              - iam:DeleteRole
+              - iam:DeleteRolePolicy
+              - iam:DetachRolePolicy
+              - iam:GetOpenIDConnectProvider
+              - iam:GetPolicy
+              - iam:GetPolicyVersion
+              - iam:GetRole
+              - iam:GetRolePolicy
+              - iam:ListAttachedRolePolicies
+              - iam:ListInstanceProfilesForRole
+              - iam:ListPolicyVersions
+              - iam:ListRolePolicies
+              - kms:DeleteAlias
+              - kms:DescribeKey
+              - kms:GetKeyPolicy
+              - kms:GetKeyRotationStatus
+              - kms:ListAliases
+              - kms:ListResourceTags
+              - kms:ScheduleKeyDeletion
+              - logs:DeleteLogGroup
+              - logs:DescribeLogGroups
+              - logs:ListTagsLogGroup
+              - route53:DeleteHostedZone
+              - route53:GetDNSSEC
+              - route53:GetHostedZone
+              - route53:ListResourceRecordSets
+              - route53:ListTagsForResource
+              - route53:ChangeTagsForResource
+              - s3:GetObject
+              - s3:ListBucket
+              - kms:RetireGrant
+              - ec2:DeleteSecurityGroup
             Resource: "*"
