fix: add reprovision permission (#37)
* fix: add reprovision permission

* addtl

* fix: update cloudformation stack

--- a/artifacts/cloudformation-template.yaml
+++ b/artifacts/cloudformation-template.yaml
@@ -95,6 +95,8 @@ Resources:
               - ecr:ListTagsForResource
               - ecr:TagResource
               - eks:CreateCluster
+              - eks:DescribeUpdate
+              - eks:UpdateNodegroupVersion
               - eks:CreateNodegroup
               - eks:DescribeCluster
               - eks:TagResource
