--- a/artifacts/cloudformation-template.yaml
+++ b/artifacts/cloudformation-template.yaml
@@ -56,11 +56,9 @@ Resources:
               - ec2:AuthorizeSecurityGroupEgress
               - ec2:AuthorizeSecurityGroupIngress
               - ec2:AuthorizeSecurityGroupIngress
-              - ec2:DescribeSecurityGroupReferences
-              - ec2:DescribeSecurityGroupRules
-              - ec2:DescribeSecurityGroups
-              - ec2:DescribeAvailabilityZones
               - ec2:CreateInternetGateway
+              - ec2:CreateLaunchTemplate
+              - ec2:CreateLaunchTemplateVersion
               - ec2:CreateNatGateway
               - ec2:CreateNetworkAclEntry
               - ec2:CreateRoute
@@ -69,15 +67,17 @@ Resources:
               - ec2:CreateSubnet
               - ec2:CreateTags
               - ec2:CreateVpc
-              - ec2:CreateLaunchTemplateVersion
-              - ec2:CreateLaunchTemplate
               - ec2:DescribeAddresses
+              - ec2:DescribeAvailabilityZones
               - ec2:DescribeInternetGateways
               - ec2:DescribeLaunchTemplateVersions
               - ec2:DescribeLaunchTemplates
               - ec2:DescribeNatGateways
               - ec2:DescribeNetworkAcls
               - ec2:DescribeRouteTables
+              - ec2:DescribeSecurityGroupReferences
+              - ec2:DescribeSecurityGroupRules
+              - ec2:DescribeSecurityGroups
               - ec2:DescribeSecurityGroups
               - ec2:DescribeSubnets
               - ec2:DescribeTags
@@ -85,32 +85,40 @@ Resources:
               - ec2:DescribeVpcClassicLink
               - ec2:DescribeVpcClassicLinkDnsSupport
               - ec2:DescribeVpcs
+              - ec2:ModifyLaunchTemplate
               - ec2:ModifySubnetAttribute
               - ec2:ModifyVpcAttribute
-              - ec2:ModifyLaunchTemplate
               - ec2:RevokeSecurityGroupEgress
               - ec2:RunInstances
               - ecr:CreateRepository
               - ecr:DescribeRepositories
               - ecr:ListTagsForResource
               - ecr:TagResource
-              - eks:CreateCluster
-              - eks:DescribeUpdate
-              - eks:UpdateNodegroupVersion
-              - eks:CreateNodegroup
-              - eks:DescribeCluster
-              - eks:TagResource
-              - eks:ListTagsForResource
-              - eks:DescribeNodegroup
-              - eks:ListAddons
+              - ecr:UntagResource
+              - eks:AssociateAccessPolicy
+              - eks:CreateAccessEntry
               - eks:CreateAddon
+              - eks:CreateCluster
+              - eks:CreateNodegroup
+              - eks:DescribeAccessEntry
               - eks:DescribeAddon
               - eks:DescribeAddonConfiguration
               - eks:DescribeAddonVersions
+              - eks:DescribeCluster
+              - eks:DescribeNodegroup
+              - eks:DescribeUpdate
+              - eks:DisassociateAccessPolicy
+              - eks:ListAccessEntries
+              - eks:ListAddons
+              - eks:ListAssociatedAccessPolicies
+              - eks:ListTagsForResource
+              - eks:TagResource
+              - eks:UntagResource
+              - eks:UpdateAccessEntry
+              - eks:UpdateAddon
+              - eks:UpdateNodegroupVersion
               - iam:AttachRolePolicy
               - iam:CreateOpenIDConnectProvider
-              - iam:UpdateAssumeRolePolicy
-              - iam:TagOpenIDConnectProvider
               - iam:CreatePolicy
               - iam:CreatePolicyVersion
               - iam:CreateRole
@@ -124,8 +132,12 @@ Resources:
               - iam:ListRolePolicies
               - iam:PassRole
               - iam:PutRolePolicy
+              - iam:TagOpenIDConnectProvider
               - iam:TagPolicy
               - iam:TagRole
+              - iam:UntagPolicy
+              - iam:UntagRole
+              - iam:UpdateAssumeRolePolicy
               - kms:CreateAlias
               - kms:CreateGrant
               - kms:CreateKey
@@ -136,19 +148,21 @@ Resources:
               - kms:ListResourceTags
               - kms:PutKeyPolicy
               - kms:TagResource
+              - kms:UntagResource
               - logs:CreateLogGroup
-              - logs:TagLogGroup
               - logs:DescribeLogGroups
               - logs:ListTagsLogGroup
               - logs:PutRetentionPolicy
+              - logs:TagLogGroup
               - logs:TagResource
+              - logs:UntagResource
+              - route53:ChangeResourceRecordSets
               - route53:ChangeTagsForResource
               - route53:CreateHostedZone
               - route53:GetChange
               - route53:GetHostedZone
               - route53:ListResourceRecordSets
               - route53:ListTagsForResource
-              - route53:ChangeResourceRecordSets
               - s3:GetObject
               - s3:ListBucket
               - s3:PutObject
@@ -167,21 +181,23 @@ Resources:
           - Effect: Allow
             Action:
               - ec2:DeleteInternetGateway
-              - ec2:DeleteVpc
+              - ec2:DeleteLaunchTemplate
+              - ec2:DeleteLaunchTemplateVersions
               - ec2:DeleteNatGateway
+              - ec2:DeleteNetworkAclEntry
+              - ec2:DeleteNetworkInterface
               - ec2:DeleteRoute
               - ec2:DeleteRouteTable
+              - ec2:DeleteSecurityGroup
               - ec2:DeleteSubnet
               - ec2:DeleteTags
-              - ec2:DeleteNetworkAclEntry
+              - ec2:DeleteVpc
               - ec2:DescribeAddresses
               - ec2:DescribeInternetGateways
               - ec2:DescribeLaunchTemplateVersions
               - ec2:DescribeLaunchTemplates
               - ec2:DescribeNatGateways
               - ec2:DescribeNetworkAcls
-              - ec2:DeleteNetworkInterface
-              - ec2:DetachNetworkInterface
               - ec2:DescribeNetworkInterfaces
               - ec2:DescribeRouteTables
               - ec2:DescribeSecurityGroupRules
@@ -193,20 +209,24 @@ Resources:
               - ec2:DescribeVpcClassicLinkDnsSupport
               - ec2:DescribeVpcs
               - ec2:DetachInternetGateway
+              - ec2:DetachNetworkInterface
               - ec2:DisassociateAddress
               - ec2:DisassociateRouteTable
-              - ec2:DeleteLaunchTemplate
-              - ec2:DeleteLaunchTemplateVersions
               - ec2:ReleaseAddress
               - ec2:RevokeSecurityGroupIngress
               - ecr:DeleteRepository
               - ecr:DescribeRepositories
               - ecr:ListTagsForResource
+              - eks:DeleteAccessEntry
+              - eks:DeleteAddon
               - eks:DeleteCluster
               - eks:DeleteNodegroup
+              - eks:DescribeAccessEntry
               - eks:DescribeCluster
               - eks:DescribeNodegroup
-              - eks:DeleteAddon
+              - eks:DisassociateAccessPolicy
+              - eks:ListAccessEntries
+              - eks:ListAssociatedAccessPolicies
               - iam:DeleteOpenIDConnectProvider
               - iam:DeletePolicy
               - iam:DeletePolicyVersion
@@ -222,24 +242,25 @@ Resources:
               - iam:ListInstanceProfilesForRole
               - iam:ListPolicyVersions
               - iam:ListRolePolicies
+              - iam:UntagPolicy
+              - iam:UntagRole
               - kms:DeleteAlias
               - kms:DescribeKey
               - kms:GetKeyPolicy
               - kms:GetKeyRotationStatus
               - kms:ListAliases
               - kms:ListResourceTags
+              - kms:RetireGrant
               - kms:ScheduleKeyDeletion
               - logs:DeleteLogGroup
               - logs:DescribeLogGroups
               - logs:ListTagsLogGroup
+              - route53:ChangeTagsForResource
               - route53:DeleteHostedZone
               - route53:GetDNSSEC
               - route53:GetHostedZone
               - route53:ListResourceRecordSets
               - route53:ListTagsForResource
-              - route53:ChangeTagsForResource
               - s3:GetObject
               - s3:ListBucket
-              - kms:RetireGrant
-              - ec2:DeleteSecurityGroup
             Resource: "*"
